@@ -64,8 +64,22 @@
 	
 	<init module="BugUtil" function="readLoggingOptions" immediate="true"/>
     <init module="BugDll" immediate="true"/>
-    <init module="BugGameUtils" immediate="true"/>
+	<init module="BugEventManager" function="configure" immediate="true">
+		<arg name="logging" type="boolean" value="false"/>
+		<arg name="noLogEvents" type="set">
+			"gameUpdate",
+			"mouseEvent",
+			"kbdEvent"
+		</arg>
+	</init>
 	
 	<event type="gameUpdate" module="BugUtil" function="doDeferredCalls"/>
 	<event type="BeginPlayerTurn" module="BugUtil" function="doHotSeatCheck"/>
+	
+	<event type="LanguageChanged" module="BugOptions" function="clearAllTranslations"/>
+	<event type="LanguageChanged" module="BugOptionsScreen" function="clearAllTranslations"/>
+	<shortcut module="BugOptionsScreen" function="showOptionsScreen" keys="Alt Ctrl O | Alt J"/>
+	
+	<shortcut module="BugHelp" function="launch" keys="Alt Ctrl F1"/>
+		<!--arg type="string" value="TXT_KEY_BUG_HELP_FILE"/-->
 </mod>
